--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="list-el">
-                    <a class="button" href="https://www.linkedin.com/in/gilsonfernandomartias/" target="_blank" rel="me">
+                    <a class="button" href="https://www.linkedin.com/in/gilsonmartias/" target="_blank" rel="me">
                         <i title="Linkedin" aria-hidden="true"></i>
                         <span>Linkedin</span>
                     </a>
