--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <h1 class="name">Gilson Martias</h1>
             <h2 class="role">Computer Engineering Student</h2>
         </div>
+        <div id="switch" onclick="toggleMode()">
+            <button></button>
+            <span></span>
+          </div>
         <div class="contact-list">
             <ul class="list">
                 <li class="list-el">
@@ -49,5 +53,15 @@
             </ul>
         </div>
     </div>
+    <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+  ></script>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
