--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             <button></button>
             <span></span>
           </div>
+          <div id="links">
+            <ul>
+              <li><a href="https://github.com/GilsonMartias">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/in/gilsonmartias/">Linkedin</a></li>              
+            </ul>
+          </div>
+          <div id="socialLinks">
+            <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>            
+            
+          </div>
         <div class="contact-list">
             <ul class="list">
                 <li class="list-el">
